Adiciona producao e aprimora receitas
